<resources>
    <string name="app_name">Quiz_test</string>
    <string name="select_your_topic">Select your Topic</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="android">android</string>
    <string name="html">HTML</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="selected_topic">Selected Topic</string>
    <string name="_1_4">1/4</string>
    <string name="option_1">Option 1</string>
    <string name="the_question_will_appear_here">The question will appear here...</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="display_mode_light_dark">Display mode(Light/Dark)</string>
    <string name="change">change</string>
    <string name="you_have_completed_the_quiz">You have completed the Quiz!!</string>
    <string name="home">Home</string>
    <string name="your_score">Your Score:</string>
    <string name="save_your_score">Save Your Score</string>
    <string name="see_high_scores">See High Scores</string>
    <string name="score">Score:</string>
    <string name="_01_59">01:59</string>
    <string name="decrease_brightness">Decrease Brightness</string>
</resources>
