<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/quiz_outcome_layout"
    tools:context=".QuizOutcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_green"
        android:layout_margin="30dp"
        android:text="@string/you_have_completed_the_quiz"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:background="@color/purple_200"
        android:id="@+id/score"
        android:text="@string/your_score"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/save_your_score"/>

    <Button
        android:id="@+id/high_score_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/see_high_scores"/>

    <Button
        android:id="@+id/home_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/home"/>

</LinearLayout>