<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/quiz_layout"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/teal_700">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:src="@drawable/back_button"/>

        <TextView
            android:id="@+id/selected_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/selected_topic"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/stopwatch"/>

            <TextView
                android:id="@+id/stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/_01_59"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:background="@color/purple_200"
        android:text="@string/_1_4"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/the_question_will_appear_here"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/option_1"
        android:background="@drawable/rectangle_white_stroke_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/option_2"
        android:background="@drawable/rectangle_white_stroke_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/option_3"
        android:background="@drawable/rectangle_white_stroke_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/option_4"
        android:background="@drawable/rectangle_white_stroke_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/next"
        android:background="@drawable/rectangle_green"/>

</LinearLayout>