<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/home_layout"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_margin="35dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_topic"
        android:layout_marginBottom="35dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/select_your_topic"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_row"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="35dp"
        android:layout_below="@+id/select_topic">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/java_setup"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle_purple"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/java_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/java"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/python_setup"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/rectangle_purple"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/python_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/python"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_row"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="35dp"
        android:layout_below="@+id/first_row">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/android_setup"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle_purple"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/android_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/android"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/html_setup"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/rectangle_purple"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/html_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/html"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_below="@+id/second_row"
        android:background="@drawable/rectangle_green"/>


</RelativeLayout>
