<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/settings_layout"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/teal_700">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:src="@drawable/back_button"/>

        <TextView
            android:id="@+id/selected_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/settings_icon"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:id="@+id/display_mode_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/display_mode_light_dark"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_mode"
                android:text="@string/change"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:id="@+id/brightness_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/decrease_brightness"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_brightness"
                android:text="@string/change"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
